--- a/assignment.html
+++ b/assignment.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <question style="color: burlywood; font-style: italic; font-size: x-large;">
-    <h1> 1. 15 CSS PROPERTIES AND THEIR VALUES (5) EACH</h1>
+    <h1 id="my-blue"> 1. 15 CSS PROPERTIES AND THEIR VALUES (5) EACH</h1>
     <h1> 2. GIVE EXAMPLES OF IN-LINE, INTERNAL AND EXTERNAL STYLINGS</h1>
     <h1> 3. GIVE EXAMPLE OF USING #ID AS A SELECTOR</h1>
 
